--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ head {
     padding: 32px;
     background-color: rgb(11, 163, 148);
     text-align: center;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .items {
