--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-head {
+body {
     box-sizing: border-box;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0 auto;
 }
 
 .recipe-title {
@@ -9,7 +10,7 @@ head {
 }
 
 .list {
-    padding: 32px;
+    padding: 20px;
     background-color: rgb(11, 163, 148);
     text-align: center;
     margin: 0 auto;
@@ -17,7 +18,7 @@ head {
 
 .items {
     padding: 20px;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: bold;
     color: white;
 }
